# avr-libc

./: .gitignore  AUTHORS  AvrCommon.am  AvrCommonLibC.am  ChangeLog  ChangeLog-2002  ChangeLog-2003  ChangeLog-2004  ChangeLog-2005  ChangeLog-2006  ChangeLog-2007  ChangeLog-2009  ChangeLog-2010  ChangeLog-2011  ChangeLog-2012  ChangeLog-2013  ChangeLog-2016  ChangeLog-2017  ChangeLog-2018  ChangeLog-2021  INSTALL  LICENSE  Makefile.am  NEWS  NEWS.md  README  README.md  acconfig.h  avr-libc.spec.in  bootstrap  config-ml.in  configure.ac  configure.in  doconf  dodist  domake  main.c  reconf  supported-mcus.txt.in
common/: Makefile.am  alias.h  asmdef.h  best_as.h  ctoasm.inc  ftoa_engine.h  gasava.inc  macros.inc  ntz.h  sectionname.h
crt1/: Makefile.am  gcrt1.S
crt1/iosym/: Makefile.am  at90can128.S  at90can32.S  at90can64.S  at90pwm1.S  at90pwm161.S  at90pwm216.S  at90pwm2b.S  at90pwm316.S  at90pwm81.S  at90s8515.S  at90usb1286.S  at90usb1287.S  at90usb162.S  at90usb646.S  at90usb647.S  ata5272.S  ata5700m322.S  ata5702m322.S  ata5782.S  ata5787.S  ata5790.S  ata5790n.S  ata5791.S  ata5795.S  ata5831.S  ata5835.S  ata6285.S  ata6286.S  ata6612c.S  ata6613c.S  ata6614q.S  ata6616c.S  ata664251.S  ata8210.S  ata8510.S  atmega128.S  atmega1280.S  atmega1281.S  atmega1284.S  (+230 more)
devtools/: Architecture.am  Avr.am  Device.am  Lib.am  Makefile.am  README.md  aclocal.m4  compare-libc.sh  configure  configure.ac  cr_check.py  filter-mcus.py.in  findreg.xsl  gen-avr-lib-tree.sh  gen-avr-lib-tree.sh.in  generate_iosym.sh  ioreg.pl  make-binary-dist.sh  math2dox.in  mcu-to-avr-name.sh  mlib-gen.py  release-checklist  signats.py  signats.sh  specs2libtree.py  table.tar.bz2  update-news.in
doc/: CHANGES.old  ChangeLog  INSTALL  Makefile.am  TODO  avr-libc-reference.html  register-usage.txt
doc/api/: Makefile.am  acknowledge.dox  assembler.dox  avr-libc-logo.xcf.bz2  avrs.png-save  bench-fxlib.dox  bench-libc.dox  bench-libf7.dox  bench-libm.dox  bench.dox  dox.css  dox_html_header  dox_latex_header.tex  doxygen.config.in  faq.dox  faq.dox.in  filter-dox.sh  filter-dox.sh.in  gen-vectortable-dox.sh  globals-index.dox  inline_asm.dox  interrupts.dox  isrs-to-dox.py  library.dox  main_page.dox  main_page.dox.in  malloc-std.fig  malloc-x1.fig  malloc-x2.fig  malloc.dox  mcus-to-isrs.sh  optimize.dox  overview.dox  pgmspace.dox  porting.dox  rel-method.dox  releases.fig  reordering-code.dox  sections.dox  sfr.dox  (+6 more)
doc/examples/: .gitignore  Makefile.am  all-demos.dox  avr-recv.c  io.c  prg  printf.h  progmem.c  send_byte.s  signal.c
doc/examples/asmdemo/: Makefile  asmdemo.c  asmdemo.dox  isrs.S  project.h
doc/examples/demo/: Makefile  avrlibc.mk  demo.c  demo.dox  demo.fig  iocompat.h
doc/examples/largedemo/: Makefile  largedemo.c  largedemo.dox
doc/examples/stdiodemo/: Makefile  defines.h  hd44780.c  hd44780.h  lcd.c  lcd.h  stdiodemo.c  stdiodemo.dox  uart.c  uart.h
doc/examples/twitest/: Makefile  twitest.c  twitest.dox
docs/: .gitignore  LICENSE.txt  avr-libc-user-manual-1.8.1.tar.bz2  avr-libc-user-manual-2.0.0.tar.bz2  avr-libc-user-manual-2.1.0.tar.bz2  avr-libc-user-manual-2.2.0.tar.bz2  avr-libc-user-manual-2.3.0.tar.bz2  index.html  style.css
include/: Makefile.am  alloca.h  assert.h  ctype.h  eeprom.h  errno.h  ina90.h  interrupt.h  inttypes.h  io.h  math.h  pgmspace.h  progmem.h  setjmp.h  sig-avr.h  signal.h  stdfix-avrlibc.h  stdint.h  stdio.h  stdlib.h  string.h  time.h  timer.h  twi.h  wdt.h
include/avr/: Makefile  Makefile.am  Makefile.in  boot.h  builtins.h.in  common.h  cpufunc.h  crc16.h  delay.h  eeprom.h  flash.h  fuse.h  ina90.h  interrupt.h  io.h  io1200.h  io2313.h  io2323.h  io2333.h  io2343.h  io43u32x.h  io43u35x.h  io4414.h  io4433.h  io4434.h  io76c711.h  io8515.h  io8534.h  io8535.h  io86r401.h  io90pwm1.h  io90pwm161.h  io90pwm216.h  io90pwm2b.h  io90pwm316.h  io90pwm3b.h  io90pwm81.h  io90pwmx.h  io90scr100.h  ioa5272.h  (+392 more)
libc/: Makefile.am
libc/misc/: Files.am  Makefile.am  Rules.am  call_main.S  ccp_write.S  ccp_write_spm.S  cvt_init.S  ee_rb.S  ee_rblk.S  ee_rw.S  ee_wb.S  ee_wblk.S  ee_ww.S  eedef.h  eeprom.S  eerd_block.S  eerd_block.c  eerd_byte.S  eerd_dword.S  eerd_dword.c  eerd_qword.S  eerd_u24.S  eerd_word.S  eerd_word.c  eeupd_block.S  eeupd_byte.S  eeupd_dword.S  eeupd_qword.S  eeupd_u24.S  eeupd_word.S  eewr_block.S  eewr_block.c  eewr_block_xmega.c  eewr_byte.S  eewr_dword.S  eewr_dword.c  eewr_qword.S  eewr_u24.S  eewr_word.S  eewr_word.c  (+25 more)
libc/pmstring/: Files.am  Makefile.am  Rules.am  _memcpy_P.S  _strcmp_P.S  _strcpy_P.S  memccpy_P.S  memchr_P.S  memcmp_P.S  memcmp_PF.S  memcpy_P.S  memcpy_PF.S  memrchr_P.S  stpcpy_P.S  stpcpy_PF.S  strcasecmp_P.S  strcasecmp_PF.S  strcat_P.S  strcat_PF.S  strchr_P.S  strchr_PF.S  strchrnul_P.S  strcmp_P.S  strcmp_PF.S  strcpy_P.S  strcpy_PF.S  strcspn_P.S  strlcat_P.S  strlcat_PF.S  strlcpy_P.S  strlcpy_PF.S  strlen_P.S  strlen_PF.S  strncasecmp_P.S  strncasecmp_PF.S  strncat_P.S  strncat_PF.S  strncmp_P.S  strncmp_PF.S  strncpy_P.S  (+11 more)
libc/stdio/: Files.am  Makefile.am  Rules.am  clearerr.c  fclose.c  fdevopen.c  feof.c  ferror.c  fflush.c  fgetc.c  fgets.c  fprintf.c  fprintf_p.c  fputc.c  fputs.c  fputs_p.c  fread.c  fscanf.c  fscanf_p.c  fwrite.c  getc.S  getchar.c  gets.c  iob.c  printf.c  printf_p.c  printf_p_new.c  putc.S  putchar.c  puts.c  puts_p.c  pwr_10.c  scanf.c  scanf_p.c  snprintf.c  snprintf_p.c  sprintf.c  sprintf_p.c  sscanf.c  sscanf_p.c  (+14 more)
libc/stdlib/: Files.am  Makefile.am  Rules.am  _abort.S  abort.S  abort.c  abs.c  assert.c  atexit.c  atof.S  atoff.S  atofl.S  atoi.S  atoi.c  atol.S  atol.c  bsearch.c  calloc.c  cty_isfalse.S  ctype.S  div.S  dtoa_conv.h  dtoa_prf.c  dtostre.c  dtostrf.c  errno.c  exit.S  ftoa_conv.h  ftoa_engine.S  ftoa_prf.c  ftostre.c  ftostrf.c  getenv.c  isalnum.S  isalpha.S  isascii.S  isblank.S  iscntrl.S  isdigit.S  isprint.S  (+41 more)
libm/: Makefile.am
m4/: Makefile.am  check-builtin-delay-cycles.m4  check-cc-option-and-set.m4  check-device-lib.m4  check-doxygen.m4  check-fixed-point.m4  check-jump-tables-issue.m4  check-objdump-minus-h.m4  (+14 more)
(+2646 files in other folders)
